# django-expenses

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  base.html.sample  pyproject.toml  requirements.txt  setup.py
expenses/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  pagination.py  queries.py  reports.py  urls.py  utils.py
expenses/migrations/: 0001_initial.py  0002_shorter_descriptions.py  0003_shorten_vendor.py  0004_delete_billitemtemplate.py  0005_expensetemplate_name.py  0006_expensetemplate_comment_blank.py  0007_expensetemplate_type_defaults_to_simple.py  0008_field_friendly_names_change.py  0009_templates_with_custom_description.py  0010_deletionrecord.py  0011_long_template_description.py  0012_category_slug_index.py  0013_expense_description_cache.py  0014_expense_description_cache_everywhere.py  0015_desc_select_templates.py  0016_menu_templates.py  0017_optional_billitem_serving.py  0018_apikey.py
expenses/templatetags/: expenses_extras.py
expenses/views/: __init__.py  api_autocomplete.py  api_lite.py  api_sync.py  bill.py  bill_item.py  category.py  expense.py  reports.py  search.py  template.py
scss/: Makefile  _variables.scss  expenses-report-print.scss
ts/: Makefile  autocomplete.ts  billeditor.ts  billtable.ts  bulkcateditor.ts  exp_autocomplete.ts  expenses.ts  exputils.ts  flickmenu.ts  globals.d.ts  package-lock.json  package.json  searchform.ts  templateedit.ts  tsconfig.json  webpack.config.js
ts/js/: billtable.js  exp_autocomplete.js  expenses.js
(+49 files in other folders)
